# wikipedia_knowledge_explorer

./: ARCHITECTURE.md  README.md  compose.yml
backend/: .dockerignore  .env  Dockerfile  README.md  alembic.ini  main.py  mypy.ini  pyproject.toml
backend/core/: config.py  create_app.py  logging.py
backend/database/: session.py
backend/database/models/: __init__.py  saved_article.py  users.py
backend/features/: __init__.py
backend/features/articles/: controllers.py  routes.py  schemas.py  services.py
backend/features/auth/: __init__.py  controllers.py  dependencies.py  routes.py  schemas.py  services.py  session.py
backend/features/saved_articles/: __init__.py  controllers.py  routes.py  schemas.py  services.py
backend/features/search/: __init__.py  controllers.py  routes.py  schemas.py  services.py
backend/middlewares/: exception_handler.py
backend/migrations/: README  env.py
backend/migrations/versions/: 2a08348d65c5_first_migration.py  5b7249323eda_add_saved_articles_table.py  __init__.py  b14cfb63970a_add_deleted_at_to_saved_articles.py
backend/tests/: conftest.py  test_articles.py  test_search.py
frontend/: .dockerignore  Dockerfile  components.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/articles/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/contexts/: AuthContext.tsx
frontend/features/articles/services/: index.ts
frontend/features/auth/: ProtectedRoute.tsx
frontend/features/services/: httpClient.ts
frontend/lib/: api.ts  auth.ts
(+12 files in other folders)
