[project]
name = "wikipedia-knowledge-explorer-backend"
version = "0.1.0"
description = "Wikipedia Knowledge Explorer Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "psycopg[binary]",
  "python-dotenv",
  "pydantic-settings",
  "alembic>=1.18.4",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "pydantic[email]>=2.12.5",
  "bcrypt>=4.0.1,<5.0.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
